// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion different className 1`] = `
<div
  className="testCSSClass"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion false 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion false 2`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion false 3`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion true 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handleClick function accordion true 2`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion handles disabled children 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={true}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion pre expanded accordion 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion pre expanded accordion when accordion is false 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;

exports[`Accordion renders correctly with accordion false 1`] = `
<div
  className="accordion"
  role={null}
>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake child
  </div>
  <div
    accordion={false}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake child
  </div>
</div>
`;

exports[`Accordion renders correctly with min params 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake child
  </div>
</div>
`;

exports[`Accordion works with multiple pre expanded accordion. Extra expands are just ignored. 1`] = `
<div
  className="accordion"
  role="tablist"
>
  <div
    accordion={true}
    disabled={undefined}
    expanded={true}
    onClick={[Function]}
  >
    Fake Child
  </div>
  <div
    accordion={true}
    disabled={undefined}
    expanded={false}
    onClick={[Function]}
  >
    Fake Child
  </div>
</div>
`;
